[@mantine/schedule] WeekView: Fix events overflows when event is after `endTime`

--- a/packages/@mantine/schedule/src/components/ScheduleEvent/ScheduleEvent.module.css
+++ b/packages/@mantine/schedule/src/components/ScheduleEvent/ScheduleEvent.module.css
@@ -17,6 +17,7 @@
   height: 100%;
   cursor: pointer;
   user-select: none;
+  overflow: hidden;
 
   &:where([data-truncate]) {
     width: 95%;
