--- a/packages/@mantine/schedule/src/components/WeekView/WeekView.module.css
+++ b/packages/@mantine/schedule/src/components/WeekView/WeekView.module.css
@@ -148,6 +148,7 @@
 
 .weekViewDaySlots {
   position: relative;
+  overflow: hidden;
 
   &:where([data-today]) {
     background-color: var(--mantine-primary-color-light);
